examples/test/testpolicy13301.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13301
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key18: value20
      key37: value27
      key1: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value45
          key1: value9
          key43: value19
      podSelector:
        matchLabels:
          key24: value19
          key44: value45
